<resources>
    <string name="app_name">FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="seleccione_una_mascota">Seleccione una mascota</string>
    <string name="perro">#PERRO</string>
    <string name="gato">#GATO</string>
    <string name="cerdo">#CERDO</string>
    <string name="mono">#MONO</string>
    <string name="pollos">#POLLOS</string>
    <string name="vaca">#VACA</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="favorito">Favorito</string>
    <string name="buscar">Buscar</string>
    <string name="agregar">Agregar</string>
    <string name="lista_de_animales">Lista de animales</string>
    <string name="buscar_animales">Buscar animales</string>
    <string name="perfil_animal">Perfil animal</string>
    <string name="creando_perfil">Creando perfil</string>
    <string name="fotograf_a">Fotografía</string>
    <string name="nombre">Nombre</string>
    <string name="cancelar">Cancelar</string>
    <string name="siguiente">Siguiente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="te_damos_la_bienvenida">Te damos la bienvenida</string>
    <string name="establezca_los_valores_seg_n_corresponda">Establezca los valores según corresponda</string>
    <string name="edad_humana">Edad Humana</string>
    <string name="raza">Raza</string>
    <string name="editar">Editar</string>
    <string name="compartir">Compartir</string>
    <string name="eliminar">Eliminar</string>
    <string name="a_os">Años</string>
    <string name="meses">Meses</string>
    <string name="_10">10</string>
    <string name="d_as">Días</string>
    <string name="descripci_n">Descripción</string>
    <string name="informaci_n">Información</string>
    <string name="agrupaci_n">Agrupación</string>
    <string name="mam_feros">Mamíferos</string>
    <string name="clasicaci_n">Clasificación</string>
    <string name="vertebrado">Vertebrado</string>
    <string name="gestaci_n">Gestación</string>
    <string name="_58_68_d_as">58 - 68 Días</string>
    <string name="_21">21</string>
    <string name="cr_as_promedio">Crías Promedio</string>
    <string name="_6_cr_as">6 Crías</string>
    <string name="_12_a_os">12 años</string>
    <string name="vida_promedio">Vida Promedio</string>

    <string-array name="raza">
        <item>Pitbull</item>
        <item>Bulldog</item>
        <item>Labrador</item>
        <item>Pastor Alemán</item>
        <item>Poodle</item>
        <item>Golden</item>
        <item>Chihuahua</item>
        <item>Bóxer</item>
        <item>Pug</item>
        <item>Husky</item>
    </string-array>
</resources>