<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DescriptionFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Firulais"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/perro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#153045"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gl1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_edit_24"
        style="@style/Widget.Material3.FloatingActionButton.Surface"
        app:rippleColor="#858585"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/ivPhoto"
        app:layout_constraintBottom_toBottomOf="@id/ivPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/editar"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        app:layout_constraintEnd_toStartOf="@id/v1"
        android:fontFamily="@font/roboto_bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPhoto"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/a_os"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/v1"
        app:layout_constraintTop_toBottomOf="@id/tvAge"/>
    <View android:id="@+id/v1"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#CFCFCF"
        app:layout_constraintStart_toEndOf="@id/tvAge"
        app:layout_constraintTop_toTopOf="@id/tvAge"
        app:layout_constraintEnd_toStartOf="@id/tvMonth"
        app:layout_constraintBottom_toBottomOf="@id/tvYear"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_21"
        app:layout_constraintEnd_toStartOf="@id/v2"
        android:fontFamily="@font/roboto_bold"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/v1"
        app:layout_constraintTop_toBottomOf="@id/ivPhoto"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMonthLit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/meses"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_bold"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/v1"
        app:layout_constraintEnd_toStartOf="@id/v2"
        app:layout_constraintTop_toBottomOf="@id/tvMonth"/>
    <View android:id="@+id/v2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#CFCFCF"
        app:layout_constraintEnd_toStartOf="@id/tvDays"
        app:layout_constraintStart_toEndOf="@id/tvMonth"
        app:layout_constraintTop_toTopOf="@id/tvMonth"
        app:layout_constraintBottom_toBottomOf="@id/tvMonthLit"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/roboto_bold"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/v2"
        app:layout_constraintTop_toBottomOf="@id/ivPhoto"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDaysLit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/d_as"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_bold"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/v2"
        app:layout_constraintTop_toBottomOf="@id/tvDays"/>
    <View android:id="@+id/v3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CFCFCF"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvMonthLit"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripci_n"
        android:fontFamily="@font/roboto_bold"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v3"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBodyDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/descripci_n"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <View android:id="@+id/v4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CFCFCF"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvBodyDescription"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informaci_n"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v4"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agrupaci_n"
        android:textColor="@color/black"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toStartOf="@id/v5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInformation"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMamiferos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mam_feros"
        android:textColor="@color/black"
        android:layout_marginStart="2dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/v5"
        app:layout_constraintStart_toStartOf="@id/tvInformation"
        app:layout_constraintTop_toBottomOf="@id/tvGroup"/>
    <View android:id="@+id/v5"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#CFCFCF"
        app:layout_constraintEnd_toStartOf="@id/tvQualificate"
        app:layout_constraintTop_toBottomOf="@id/tvInformation"
        app:layout_constraintBottom_toBottomOf="@id/tvMamiferos"
        app:layout_constraintStart_toEndOf="@id/tvMamiferos"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvQualificate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clasicaci_n"
        android:textColor="@color/black"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toStartOf="@id/v6"
        app:layout_constraintStart_toEndOf="@id/v5"
        app:layout_constraintTop_toBottomOf="@id/tvInformation"/>
    <View android:id="@+id/v6"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="#CFCFCF"
        app:layout_constraintStart_toEndOf="@id/tvQualificate"
        app:layout_constraintEnd_toStartOf="@id/tvGestacion"
        app:layout_constraintTop_toBottomOf="@id/tvInformation"
        app:layout_constraintBottom_toBottomOf="@id/tvMamiferos"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvGestacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gestaci_n"
        android:textColor="@color/black"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInformation"
        app:layout_constraintStart_toEndOf="@id/v6"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvVertebrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vertebrado"
        android:textColor="@color/black"
        android:layout_marginStart="2dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/v5"
        app:layout_constraintEnd_toStartOf="@id/v6"
        app:layout_constraintTop_toBottomOf="@id/tvGroup"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDaysGestacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_58_68_d_as"
        android:textColor="@color/black"
        android:layout_marginStart="2dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/v6"
        app:layout_constraintTop_toBottomOf="@id/tvGestacion"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPromedioCrias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cr_as_promedio"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toStartOf="@id/v5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMamiferos"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCrias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6_cr_as"
        android:textColor="@color/black"
        android:layout_marginStart="2dp"
        app:layout_constraintEnd_toStartOf="@id/v7"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tvPromedioCrias"
        app:layout_constraintStart_toStartOf="parent"/>
    <View android:id="@+id/v7"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="#CFCFCF"
        app:layout_constraintEnd_toEndOf="@id/v5"
        app:layout_constraintTop_toTopOf="@id/tvPromedioCrias"
        app:layout_constraintBottom_toBottomOf="@id/tvCrias"
        app:layout_constraintStart_toStartOf="@id/v5"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPromedioVida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vida_promedio"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/v8"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toEndOf="@id/v7"
        app:layout_constraintTop_toBottomOf="@id/tvVertebrado"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvVida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_a_os"
        android:textColor="@color/black"
        android:layout_marginStart="2dp"
        app:layout_constraintEnd_toStartOf="@id/v8"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/v7"
        app:layout_constraintTop_toBottomOf="@id/tvPromedioVida"/>
    <View android:id="@+id/v8"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="#CFCFCF"
        app:layout_constraintStart_toStartOf="@id/v6"
        app:layout_constraintEnd_toEndOf="@id/v6"
        app:layout_constraintTop_toTopOf="@id/tvPromedioCrias"
        app:layout_constraintBottom_toBottomOf="@id/tvCrias" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raza"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toEndOf="@id/v8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvVertebrado"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRaceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Golden Retriever"
        android:textColor="@color/black"
        android:layout_marginStart="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/v8"
        app:layout_constraintTop_toBottomOf="@id/tvPromedioVida"/>

</androidx.constraintlayout.widget.ConstraintLayout>