<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ValuesFragment">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creando_perfil"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="#173257"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_italic"
            android:text="@string/establezca_los_valores_seg_n_corresponda"
            app:layout_constraintTop_toBottomOf="@id/tvPerfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAgeHuman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad_humana"
            android:layout_marginTop="20dp"
            android:textColor="#23759A"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toStartOf="@id/npAge"
            app:layout_constraintTop_toBottomOf="@id/tvSub"/>
        <NumberPicker android:id="@+id/npAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvAgeHuman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRaz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad_humana"
            android:layout_marginTop="20dp"
            android:textColor="#23759A"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toStartOf="@id/npRaz"
            app:layout_constraintTop_toBottomOf="@id/npAge"/>
        <NumberPicker android:id="@+id/npRaz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvRaz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
