<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddActivity">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWelcome"
        android:fontFamily="@font/roboto_bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/te_damos_la_bienvenida"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:background="#153045"
        android:id="@+id/llHeader"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:src="@drawable/logo" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_close_24"
        style="@style/Widget.Material3.FloatingActionButton.Surface"
        app:rippleColor="#858585"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/agregar"
        app:layout_constraintTop_toTopOf="@id/gl1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.13"
        android:orientation="horizontal"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_margin="10dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/btnClose">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#222F70"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/viewPager"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:text="@string/cancelar"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnNext"
                app:layout_constraintTop_toBottomOf="@id/indicator"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:textAllCaps="false"
                android:backgroundTint="#33A8DC"
                android:text="@string/siguiente"
                app:layout_constraintTop_toBottomOf="@id/indicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>