<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".GeneralInfoFragment">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creando_perfil"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#173257"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_round_camera_alt_24"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_circular"
        app:layout_constraintTop_toBottomOf="@id/tvPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPhotography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fotograf_a"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#173257"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ivPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:layout_margin="10dp"
        app:boxStrokeColor="#448AFF"
        android:hint="@string/nombre"
        app:hintTextColor="#448AFF"
        app:layout_constraintTop_toBottomOf="@id/tvPhotography">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textStyle="italic"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:layout_margin="10dp"
        app:boxStrokeColor="#448AFF"
        android:hint="@string/nombre"
        android:textAlignment="inherit"
        app:hintTextColor="#448AFF"
        app:layout_constraintTop_toBottomOf="@id/tilName">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textStyle="italic"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>